feat: mi_mascota, realizacion del frontend del tal modulo mas cambios y mejoras de estilos en el registro

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_NAME=veterinaria
 # Usuario de la base de datos
 DB_USER=postgres
 # Contraseña del usuario de la base de datos
-DB_PASSWORD=root
+DB_PASSWORD=1234
 # Host donde se encuentra la base de datos
 DB_HOST=localhost
 # Puerto de conexión a la base de datos
