--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ chardet==5.2.0
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+contourpy==1.3.3
 cookiecutter==2.6.0
+cycler==0.12.1
 Django==5.2.6
 django-browser-reload==1.19.0
 django-environ==0.12.0
@@ -14,22 +16,42 @@ django-extensions==4.1
 django-tailwind==4.2.0
 django-widget-tweaks==1.5.0
 environ==1.0
+filelock==3.19.1
+fonttools==4.60.0
+fsspec==2025.9.0
 idna==3.10
 Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.6
 mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.5
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
 pillow==11.3.0
 psycopg2==2.9.10
 Pygments==2.19.2
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 PyYAML==6.0.2
 requests==2.32.5
 rich==14.1.0
+scikit-learn==1.7.2
+scipy==1.16.2
+setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
+sympy==1.14.0
 text-unidecode==1.3
+threadpoolctl==3.6.0
+torch==2.8.0
+torchvision==0.23.0
 types-python-dateutil==2.9.0.20250822
+typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
