Mejoras profesionales al dashboard con estilo minimalista y optimización de rendimiento

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ db.sqlite3
 /Veterinaria/
 
 # Python
+*.pyc
 *.py[cod]
 __pycache__/
 *.so
@@ -13,7 +14,6 @@ __pycache__/
 *.pyc
 
 # Entorno virtual
-.env
 .venv
 env/
 venv/
