--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,8 @@ pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 PyYAML==6.0.2
+qrcode==8.2
+reportlab==4.4.4
 requests==2.32.5
 rich==14.1.0
 scikit-learn==1.7.2
