Integracion de chat bot

--- a/.env
+++ b/.env
@@ -40,3 +40,7 @@ EMAIL_HOST_USER="informationsystem235@gmail.com"
 EMAIL_HOST_PASSWORD="eeey oycg ykea tioa"
 EMAIL_USE_TLS=True
 DEFAULT_FROM_EMAIL="informationsystem235@gmail.com"
+
+# Configuración para Chatbase
+CHATBOT_IDENTITY_SECRET="wa4s2dgvk0in0253mdpiahti7rr3gvve"
+DJANGO_SETTINGS_MODULE=config.settings
