--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ packaging==25.0
 pillow==11.3.0
 psycopg2==2.9.10
 Pygments==2.19.2
+PyJWT==2.8.0
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
