--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
 arrow==1.3.0
 asgiref==3.9.1
+azure-core==1.36.0
+azure-storage-blob==12.27.0
 binaryornot==0.4.4
 certifi==2025.8.3
+cffi==2.0.0
 chardet==5.2.0
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 contourpy==1.3.3
 cookiecutter==2.6.0
+cryptography==46.0.3
 cycler==0.12.1
 Django==5.2.6
 django-browser-reload==1.19.0
 django-environ==0.12.0
 django-extensions==4.1
+django-storages==1.14.6
 django-tailwind==4.2.0
 django-widget-tweaks==1.5.0
 environ==1.0
@@ -20,6 +25,8 @@ filelock==3.19.1
 fonttools==4.60.0
 fsspec==2025.9.0
 idna==3.10
+imutils==0.5.4
+isodate==0.7.2
 Jinja2==3.1.6
 joblib==1.5.2
 kiwisolver==1.4.9
@@ -34,6 +41,7 @@ opencv-python==4.12.0.88
 packaging==25.0
 pillow==11.3.0
 psycopg2==2.9.10
+pycparser==2.23
 Pygments==2.19.2
 PyJWT==2.8.0
 pyparsing==3.2.5
